# agon

./: .gitignore  README.md  plan_2.md  pyproject.toml
docs/: analysis_1.md  analysis_2.md  analysis_3.md  plan.md  prompt.txt  sandbox_design.md  unsupported_edge_cases.md
src/agon/: __init__.py  cli.py  config.py  pipeline.py  store.py
src/agon/adapters/: base.py  factory.py  python.py  python_mutator.py
src/agon/eigentest/: engine.py  mechanical.py
src/agon/models/: __init__.py  schema.py
src/agon/mutagen/: engine.py
src/agon/sandbox/: process.py
src/agon/specs/: __init__.py  base.py  file_source.py  jira_source.py  linear_source.py  openapi_source.py
src/agon/spectre/: engine.py
src/agon/triggers/: __init__.py  base.py  cli_trigger.py  git_scope.py  github_action.py  spec_resolver.py
tests/: conftest.py
tests/fixtures/specs/: openapi.yaml  requirements.md
tests/unit/: test_ci_thresholds.py  test_engine.py  test_git_scope.py  test_mechanical.py  test_mutagen.py  test_python_adapter.py  test_sandbox.py  test_spectre.py  test_store.py  test_triggers.py
tests/unit/specs/: test_file_source.py  test_openapi_source.py
