[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agon"
version = "0.1.0"
description = "Invariant-guided mutation testing and counterexample generation"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer==0.24.2",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "rich==15.0.0",
    "anyio==4.13.0",
]

[project.scripts]
agon = "agon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agon"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
    "respx==0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["src/agon"]
omit = ["tests/*"]
